FELIX-6621 : Regressions caused by FELIX-6607